Updated code to fix  some PMD unused warnings
git-svn-id: https://cdk.svn.sourceforge.net/svnroot/cdk/trunk/cdk@6419 eb4e18e3-b210-0410-a6ab-dec725e4b171